--- a/Frontend/src/app/Shell/components/shell/shell.component.html
+++ b/Frontend/src/app/Shell/components/shell/shell.component.html
@@ -1,16 +1,34 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" routerLink="/">PIM Tool</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/project" routerLinkActive="active">Project</a>
+          <a
+            class="nav-link"
+            routerLink="/project/project-list"
+            routerLinkActive="active"
+            >Project List</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link">About</a>
+          <a
+            class="nav-link"
+            routerLink="/project/create-project"
+            routerLinkActive="active"
+            >New</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link">Contact</a>
@@ -20,10 +38,10 @@
   </div>
 </nav>
 <div id="titleContent">
-    <a routerLink="/">
-      <img src="assets/img/logo.png"/>
-    </a>  
-    <br />  
+  <a routerLink="/">
+    <img src="assets/img/logo.png" />
+  </a>
+  <br />
 </div>
 <div class="container body-content">
   <router-outlet></router-outlet>
@@ -32,4 +50,3 @@
     <p>&copy; 2020</p>
   </footer>
 </div>
-
