--- a/Frontend/src/app/Base/components/newproject/newproject.component.scss
+++ b/Frontend/src/app/Base/components/newproject/newproject.component.scss
@@ -1,24 +1,28 @@
-.form-group {
+//form
+
+.form-container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
 }
 
 .form-row {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .form-row label {
   width: 150px; /* Adjust the width as needed */
-  margin-right: 10px; /* Add spacing between label and input */
+  margin-right: 10px; /* Add spacing between label and form box */
 }
 
-input[type="text"] {
+input {
   padding: 1px; /* Adjust the padding as needed */
   border: 1px solid #ccc; /* Adjust the border styles as needed */
   border-radius: 4px; /* Adjust the border-radius as needed */
 }
+
+// Form size
 
 #project-number {
   width: 200px;
@@ -39,15 +43,16 @@ input[type="text"] {
 #startdate {
   width: 200px;
 }
-
-.required-field {
-  color: red; /* Set the color of the asterisk symbol */
+.startdate {
+  user-select: text;
 }
 
+// header
 h1 {
   font-size: 35px; /* Adjust the size as per your preference */
 }
 
+// button
 .createButton {
   background-color: rgb(0, 140, 255);
   color: white;
@@ -60,6 +65,43 @@ h1 {
   border-radius: 4px;
 }
 
-.startdate {
-  user-select: text;
+button {
+  border: 1px solid #ccc;
+}
+
+// require
+
+.required-field {
+  color: red; /* Set the color of the asterisk symbol */
+}
+
+.input-group textarea {
+  /* Your regular input styles */
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.input-group input.is-invalid,
+.input-group textarea.is-invalid {
+  border-color: red;
+}
+
+.input-group select {
+  /* Your regular input styles */
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.input-group select.is-invalid {
+  border-color: red;
+}
+
+.error-message {
+  background-color: rgb(247, 218, 218);
+  color: red;
+  font-weight: normal;
+  padding: 10px;
+  width: 350px;
 }
