--- a/Frontend/src/app/Shell/components/shell/shell.component.html
+++ b/Frontend/src/app/Shell/components/shell/shell.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a
       class="navbar-brand"
@@ -46,59 +46,50 @@
   <footer>
     <p>&copy; 2020</p>
   </footer>
+</div> -->
+<!-- ............................................................................................................................. -->
+<div id="titleContent">
+  <a routerLink="/project/project-list" routerLinkActive="active">
+    <img src="assets/img/logo.png" />
+  </a>
+  <h1
+    style="
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 10px;
+      font-size: 24px;
+    "
+  >
+    Project Information Management
+  </h1>
 </div>
+<hr />
+<div class="navbar-vertical">
+  <div class="navbar-brand-wrapper">
+    <a
+      class="navbar-brand"
+      routerLink="/project/project-list"
+      routerLinkActive="active"
+      >Project List</a
+    >
 
-<!-- <div class="sidebar">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a
-        class="navbar-brand"
-        routerLink="/project/project-list"
-        routerLinkActive="active"
-        >Project List</a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              routerLink="/project/create-project"
-              routerLinkActive="active"
-              >New</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">Contact</a>
-          </li>
-        </ul>
+    <div class="navbar-brand-wrapper">
+      New
+      <div class="navbar-links">
+        <a
+          class="nav-link"
+          routerLink="/project/create-project"
+          routerLinkActive="active"
+          >Project</a
+        >
+        <a class="nav-link">Customer</a>
+        <a class="nav-link">Supplier</a>
       </div>
     </div>
-  </nav>
-</div>
-
-<div id="content">
-  <div id="titleContent">
-    <a routerLink="/project/project-list" routerLinkActive="active">
-      <img src="assets/img/logo.png" />
-    </a>
-    <br />
   </div>
+  <div class="vertical-line"></div>
   <div class="container body-content">
     <router-outlet></router-outlet>
     <hr />
-    <footer>
-      <p>&copy; 2020</p>
-    </footer>
   </div>
-</div> -->
+</div>
