--- a/Frontend/src/app/Shell/components/shell/shell.component.scss
+++ b/Frontend/src/app/Shell/components/shell/shell.component.scss
@@ -4,3 +4,15 @@
     margin: 20px;
   }
 }
+
+.navbar-vertical {
+  display: flex;
+  position: relative;
+  top: 20px;
+  left: 80px;
+}
+
+.vertical-line {
+  border-left: 1px solid #ccc;
+  height: 540px; /* Adjust the height as needed */
+}
