--- a/Frontend/src/app/Shell/components/shell/shell.component.html
+++ b/Frontend/src/app/Shell/components/shell/shell.component.html
@@ -62,6 +62,18 @@
   >
     Project Information Management
   </h1>
+
+  <label>
+    <!-- <select #langSelect (change)="translate.use(langSelect.value)">
+      <option
+        *ngFor="let lang of translate.getLangs()"
+        [value]="lang"
+        [selected]="lang === translate.currentLang"
+      >
+        {{ lang }}
+      </option>
+    </select> -->
+  </label>
 </div>
 <hr />
 <div class="navbar-vertical">
