--- a/Frontend/src/app/Base/components/grid/grid.component.html
+++ b/Frontend/src/app/Base/components/grid/grid.component.html
@@ -1,78 +1,24 @@
-<!-- <table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Status</th>
-      <th scope="col">Manager</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Test1</td>
-      <td>New</td>
-      <td>Mark</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Test2</td>
-      <td>In progress</td>
-      <td>Jacob</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Test3</td>
-      <td>Finished</td>
-      <td>Larry</td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td>Test1</td>
-      <td>New</td>
-      <td>Mark</td>
-    </tr>
-    <tr>
-      <th scope="row">5</th>
-      <td>Test2</td>
-      <td>In progress</td>
-      <td>Jacob</td>
-    </tr>
-    <tr>
-      <th scope="row">6</th>
-      <td>Test3</td>
-      <td>Finished</td>
-      <td>Larry</td>
-    </tr>
-  </tbody>
-</table> -->
-
-<mat-toolbar color="primary">
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
-    <mat-icon>supervised_user_circle</mat-icon>
-  </button>
+<mat-toolbar color="normal">
   <span>Project List</span>
-  <span class="example-spacer"></span>
-  <button mat-raised-button color="warn" (click)="openDialog()">
-    Add Project
-  </button>
 </mat-toolbar>
 
 <div clas="container">
   <div style="margin-top: 10px">
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
-        #input
-      />
-    </mat-form-field>
+    <div style="display: flex">
+      <mat-form-field>
+        <mat-label>Project number, name, customer</mat-label>
+        <input matInput (keyup)="applyFilter($event)" #input1 />
+      </mat-form-field>
+
+      <mat-form-field style="margin-left: 20px">
+        <mat-label>Project Status</mat-label>
+        <input matInput (keyup)="applyStatusFilter($event)" #input2 />
+      </mat-form-field>
+
+      <button class="clearButton" (click)="clearFilters()" type="button">
+        Reset Search
+      </button>
+    </div>
 
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
@@ -98,7 +44,9 @@
 
         <ng-container matColumnDef="startdate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Date</th>
-          <td mat-cell *matCellDef="let row">{{ row.startdate | date }}</td>
+          <td mat-cell *matCellDef="let row">
+            {{ row.startdate | date : "dd.MM.yyyy " }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
