--- a/Frontend/src/app/Base/components/grid/grid.component.scss
+++ b/Frontend/src/app/Base/components/grid/grid.component.scss
@@ -15,3 +15,27 @@ table {
   max-width: 120px;
   margin: 0 auto;
 }
+
+.mat-form-field {
+  padding: 1px; /* Adjust the padding as needed */
+  border: 1px solid #ccc; /* Adjust the border styles as needed */
+  border-radius: 4px; /* Adjust the border-radius as needed */
+  width: 250px;
+  margin-bottom: 20px;
+}
+
+.searchButton {
+  margin-left: 20px;
+  background-color: rgb(0, 140, 255);
+  color: white;
+  border-radius: 4px;
+  width: 100px;
+  height: 50px;
+}
+
+.clearButton {
+  width: 100px;
+  height: 50px;
+  border-radius: 4px;
+  margin-left: 20px;
+}
