--- a/Frontend/src/app/Base/components/grid/grid.component.html
+++ b/Frontend/src/app/Base/components/grid/grid.component.html
@@ -1,84 +1,129 @@
 <mat-toolbar color="normal">
-  <span>Project List</span>
+  <span>{{ "Project List" | translate }}</span>
 </mat-toolbar>
 
-<div clas="container">
-  <div style="margin-top: 10px">
-    <div style="display: flex">
-      <mat-form-field>
-        <mat-label>Project number, name, customer</mat-label>
-        <input matInput (keyup)="applyFilter($event)" #input1 />
-      </mat-form-field>
+<div style="margin-top: 10px">
+  <div style="display: flex">
+    <mat-form-field>
+      <mat-label> {{ "Project number, name, customer" | translate }}</mat-label>
+      <input matInput (keyup)="applyFilter($event)" #input1 />
+    </mat-form-field>
 
-      <mat-form-field style="margin-left: 20px">
-        <mat-label>Project Status</mat-label>
-        <input matInput (keyup)="applyStatusFilter($event)" #input2 />
-      </mat-form-field>
+    <mat-form-field style="margin-left: 20px">
+      <mat-label>{{ "Project Status" | translate }}</mat-label>
+      <input matInput (keyup)="applyStatusFilter($event)" #input2 />
+    </mat-form-field>
 
-      <button class="clearButton" (click)="clearFilters()" type="button">
-        Reset Search
-      </button>
-    </div>
+    <button class="clearButton" (click)="clearFilters()" type="button">
+      {{ "Reset Search" | translate }}
+    </button>
+  </div>
 
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="projectNumber">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Number</th>
-          <td mat-cell *matCellDef="let row">{{ row.projectNumber }}</td>
-        </ng-container>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? toggleAllRows() : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+            [aria-label]="checkboxLabel()"
+          >
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+            [aria-label]="checkboxLabel(row)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="projectNumber">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "Number" | translate }}
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.projectNumber }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="projectName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-          <td mat-cell *matCellDef="let row">{{ row.projectName }}</td>
-        </ng-container>
+      <ng-container matColumnDef="projectName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "Name" | translate }}
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.projectName }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-          <td mat-cell *matCellDef="let row">{{ row.status }}</td>
-        </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "Status" | translate }}
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.status }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="customer">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
-          <td mat-cell *matCellDef="let row">{{ row.customer }}</td>
-        </ng-container>
+      <ng-container matColumnDef="customer">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "Customer" | translate }}
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.customer }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="startdate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Date</th>
-          <td mat-cell *matCellDef="let row">
-            {{ row.startdate | date : "dd.MM.yyyy " }}
-          </td>
-        </ng-container>
+      <ng-container matColumnDef="startdate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "Start Date" | translate }}
+        </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.startdate | date : "dd.MM.yyyy " }}
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row">
-            <button mat-icon-button (click)="editProject(row)" color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button
-              mat-icon-button
-              (click)="deleteProduct(row.id)"
-              color="warn"
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button (click)="editProject(row)" color="primary">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            (click)="deleteProduct(row.id)"
+            color="warn"
+            *ngIf="row.status === 'New'"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">
-            No data matching the filter "{{ input.value }}"
-          </td>
-        </tr>
-      </table>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          {{ "No data matching the filter" | translate }} "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
 
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
-    </div>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
+</div>
+<div class="select-message" *ngIf="selection.selected.length != 0">
+  <p class="select-text">
+    {{ selection.selected.length }} {{ "items selected" | translate }}
+  </p>
+  <div class="select-button-container">
+    <p class="delete-text">{{ "Delete selected items" | translate }}</p>
+    <button
+      class="select-delete-button"
+      mat-icon-button
+      (click)="deleteSelectedProjects()"
+      color="warn"
+    >
+      <mat-icon>delete</mat-icon>
+    </button>
   </div>
 </div>
