--- a/Frontend/src/app/Shell/components/shell/shell.component.html
+++ b/Frontend/src/app/Shell/components/shell/shell.component.html
@@ -1,80 +1,25 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a
-      class="navbar-brand"
-      routerLink="/project/project-list"
-      routerLinkActive="active"
-      >Project List</a
-    >
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            routerLink="/project/create-project"
-            routerLinkActive="active"
-            >New</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<div id="titleContent">
+<div id="titleContent" class="header">
   <a routerLink="/project/project-list" routerLinkActive="active">
-    <img src="assets/img/logo.png" />
+    <img src="assets/img/logo.png" style="margin-right: 10px" />
   </a>
-  <br />
-</div>
-<div class="container body-content">
-  <router-outlet></router-outlet>
-  <hr />
-  <footer>
-    <p>&copy; 2020</p>
-  </footer>
-</div> -->
-<!-- ............................................................................................................................. -->
-<div id="titleContent">
-  <a routerLink="/project/project-list" routerLinkActive="active">
-    <img src="assets/img/logo.png" />
-  </a>
-  <h1
-    style="
-      display: inline-block;
-      vertical-align: middle;
-      margin-left: 10px;
-      font-size: 24px;
-    "
-  >
-    Project Information Management
+  <h1 class="title">
+    {{ "Project Information Management" | translate }}
   </h1>
 
-  <label>
-    <!-- <select #langSelect (change)="translate.use(langSelect.value)">
-      <option
-        *ngFor="let lang of translate.getLangs()"
-        [value]="lang"
-        [selected]="lang === translate.currentLang"
-      >
-        {{ lang }}
-      </option>
-    </select> -->
-  </label>
+  <div class="buttons">
+    <button
+      class="language-button"
+      *ngFor="let lang of translate.getLangs()"
+      [class.active]="lang === translate.currentLang"
+      (click)="translate.use(lang)"
+    >
+      {{ getLanguageButtonText(lang) }}
+    </button>
+  </div>
+  <button class="helpButton" type="button">{{ "Help" | translate }}</button>
+  <button class="logButton" type="button">{{ "Log out" | translate }}</button>
 </div>
+
 <hr />
 <div class="navbar-vertical">
   <div class="navbar-brand-wrapper">
@@ -82,20 +27,20 @@
       class="navbar-brand"
       routerLink="/project/project-list"
       routerLinkActive="active"
-      >Project List</a
+      >{{ "Project List" | translate }}</a
     >
 
     <div class="navbar-brand-wrapper">
-      New
+      {{ "New" | translate }}
       <div class="navbar-links">
         <a
           class="nav-link"
           routerLink="/project/create-project"
           routerLinkActive="active"
-          >Project</a
+          >{{ "Project" | translate }}</a
         >
-        <a class="nav-link">Customer</a>
-        <a class="nav-link">Supplier</a>
+        <a class="nav-link">{{ "Customer" | translate }}</a>
+        <a class="nav-link">{{ "Supplier" | translate }}</a>
       </div>
     </div>
   </div>
