--- a/Frontend/src/styles/index.scss
+++ b/Frontend/src/styles/index.scss
@@ -2,9 +2,9 @@
 
 html,
 body {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
-@import "./bootstrap"
+@import "./bootstrap";
