--- a/Frontend/src/app/Base/components/edit-project/edit-project.component.scss
+++ b/Frontend/src/app/Base/components/edit-project/edit-project.component.scss
@@ -76,7 +76,7 @@ h1 {
 // group
 
 // button
-.createButton {
+.updateButton {
   background-color: rgb(0, 140, 255);
   color: white;
   border-radius: 4px;
