--- a/Frontend/src/app/Base/components/grid/grid.component.scss
+++ b/Frontend/src/app/Base/components/grid/grid.component.scss
@@ -40,6 +40,13 @@ table {
   margin-left: 20px;
 }
 
+.searchButton {
+  width: 150px;
+  height: 50px;
+  border-radius: 4px;
+  margin-left: 20px;
+}
+
 .select-message {
   display: flex;
   background-color: rgb(202, 234, 245);
