Add PageNotFound, ProjectNumberExistException

--- a/Frontend/src/app/Base/components/edit-project/edit-project.component.html
+++ b/Frontend/src/app/Base/components/edit-project/edit-project.component.html
@@ -18,6 +18,7 @@
         type="text"
         formControlName="projectNumber"
         required
+        readonly
         [class.is-invalid]="
           localForm.submitted && newprojectForm.get('projectNumber')?.invalid
         "
@@ -125,6 +126,7 @@
         [class.is-invalid]="
           localForm.submitted && newprojectForm.get('startdate')?.invalid
         "
+        [value]="newprojectForm.get('startdate').value | date : 'dd.MM.yyyy'"
       />
     </div>
   </div>
@@ -140,6 +142,7 @@
           newprojectForm.get('enddate').invalid &&
           newprojectForm.get('enddate').touched
         "
+        [value]="newprojectForm.get('startdate').value | date : 'dd.MM.yyyy'"
       />
       <div
         *ngIf="newprojectForm.get('enddate').hasError('dateComparison')"
