--- a/Frontend/src/app/Shell/components/shell/shell.component.html
+++ b/Frontend/src/app/Shell/components/shell/shell.component.html
@@ -8,7 +8,7 @@
 
   <div class="buttons">
     <button
-      class="language-button"
+      class="language-button button-margin-right"
       *ngFor="let lang of translate.getLangs()"
       [class.active]="lang === translate.currentLang"
       (click)="translate.use(lang)"
