--- a/Frontend/src/app/Base/components/edit-project/edit-project.component.scss
+++ b/Frontend/src/app/Base/components/edit-project/edit-project.component.scss
@@ -17,18 +17,10 @@ mat-form-field {
   flex: 0 0 250px;
 }
 
-// .input-group input,
-// .input-group select {
-//   flex: 1;
-//   padding: 5px;
-//   border: 1px solid #ccc;
-//   border-radius: 4px;
-// }
-
 input {
-  padding: 1px; /* Adjust the padding as needed */
-  border: 1px solid #ccc; /* Adjust the border styles as needed */
-  border-radius: 4px; /* Adjust the border-radius as needed */
+  padding: 1px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 // Form size
@@ -70,7 +62,7 @@ input {
 
 // header
 h1 {
-  font-size: 35px; /* Adjust the size as per your preference */
+  font-size: 35px;
 }
 
 // group
@@ -100,11 +92,10 @@ button {
 // require
 
 .required-field {
-  color: red; /* Set the color of the asterisk symbol */
+  color: red;
 }
 
 .input-group textarea {
-  /* Your regular input styles */
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -116,7 +107,6 @@ button {
 }
 
 .input-group select {
-  /* Your regular input styles */
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
