--- a/Frontend/src/app/Base/components/grid/grid.component.scss
+++ b/Frontend/src/app/Base/components/grid/grid.component.scss
@@ -17,9 +17,9 @@ table {
 }
 
 .mat-form-field {
-  padding: 1px; /* Adjust the padding as needed */
-  border: 1px solid #ccc; /* Adjust the border styles as needed */
-  border-radius: 4px; /* Adjust the border-radius as needed */
+  padding: 1px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   width: 250px;
   margin-bottom: 20px;
 }
@@ -34,7 +34,7 @@ table {
 }
 
 .clearButton {
-  width: 100px;
+  width: 150px;
   height: 50px;
   border-radius: 4px;
   margin-left: 20px;
@@ -74,4 +74,16 @@ table {
   margin-top: 10px;
   color: rgb(192, 97, 7);
   font-size: 15px;
+}
+
+.projectList-page {
+  margin-top: 10px;
+}
+
+.filter-container {
+  display: flex;
+}
+
+.status-filter {
+  margin-left: 20px;
 }
