--- a/Frontend/src/app/Shell/components/shell/shell.component.scss
+++ b/Frontend/src/app/Shell/components/shell/shell.component.scss
@@ -30,7 +30,7 @@
 .language-button {
   background-color: rgb(0, 140, 255);
   color: white;
-  border-radius: 4px;
+  border-radius: 1px;
   width: 50px;
   border: none;
 }
@@ -57,4 +57,8 @@
 
 .title {
   font-weight: bold;
+}
+
+.button-margin-right {
+  margin-right: 10px;
 }
