Align text in Forms

--- a/Frontend/src/app/Base/components/edit-project/edit-project.component.html
+++ b/Frontend/src/app/Base/components/edit-project/edit-project.component.html
@@ -18,6 +18,7 @@
         formControlName="projectNumber"
         required
         readonly
+        class="projectNumber"
         [class.is-invalid]="
           localForm.submitted && newprojectForm.get('projectNumber')?.invalid
         "
