--- a/Frontend/src/app/Base/components/grid/grid.component.html
+++ b/Frontend/src/app/Base/components/grid/grid.component.html
@@ -14,9 +14,9 @@
       <input matInput #input2 />
     </mat-form-field>
 
-    <!-- <mat-form-field style="margin-left: 20px">
+    <!-- <mat-form-field class="status-filter">
       <mat-label>{{ "Project Status" | translate }}</mat-label>
-      <mat-select formControlName="status">
+      <mat-select #input2>
         <mat-option value="New">{{ "New" | translate }}</mat-option>
         <mat-option value="Planned">{{ "Planned" | translate }}</mat-option>
         <mat-option value="In Progress">{{
