--- a/Frontend/src/app/Base/components/newproject/newproject.component.scss
+++ b/Frontend/src/app/Base/components/newproject/newproject.component.scss
@@ -151,3 +151,17 @@ button {
   width: 400px;
   margin-left: 20px;
 }
+
+input[type="text"] {
+  /* Add your desired styles here */
+  padding: 8px;
+}
+
+select[type="text"] {
+  padding: 8px;
+}
+
+input[type="date"] {
+  /* Add your desired styles here */
+  padding: 8px;
+}
