--- a/Frontend/src/app/Shell/components/shell/shell.component.html
+++ b/Frontend/src/app/Shell/components/shell/shell.component.html
@@ -39,12 +39,8 @@
           routerLinkActive="active"
           >{{ "Project" | translate }}</a
         >
-        <a routerLink="/customer" class="nav-link">{{
-          "Customer" | translate
-        }}</a>
-        <a routerLink="/supplier" class="nav-link">{{
-          "Supplier" | translate
-        }}</a>
+        <a class="nav-link">{{ "Customer" | translate }}</a>
+        <a class="nav-link">{{ "Supplier" | translate }}</a>
       </div>
     </div>
   </div>
