--- a/Frontend/src/app/Base/components/grid/grid.component.html
+++ b/Frontend/src/app/Base/components/grid/grid.component.html
@@ -26,6 +26,18 @@
       </mat-select>
     </mat-form-field> -->
 
+    <!-- <mat-form-field class="status-filter">
+      <mat-label>{{ "Project Status" | translate }}</mat-label>
+      <mat-select (selectionChange)="onChange($event)">
+        <mat-option value="New">{{ "New" | translate }}</mat-option>
+        <mat-option value="Planned">{{ "Planned" | translate }}</mat-option>
+        <mat-option value="In Progress">{{
+          "In Progress" | translate
+        }}</mat-option>
+        <mat-option value="Finished">{{ "Finished" | translate }}</mat-option>
+      </mat-select>
+    </mat-form-field> -->
+
     <button
       class="searchButton"
       mat-raised-button
