--- a/Frontend/src/app/Base/components/grid/grid.component.scss
+++ b/Frontend/src/app/Base/components/grid/grid.component.scss
@@ -28,23 +28,21 @@ table {
   margin-left: 20px;
   background-color: rgb(0, 140, 255);
   color: white;
-  border-radius: 4px;
+  border-radius: 2px;
   width: 100px;
   height: 50px;
+  width: 150px;
+  height: 50px;
+  border-radius: 4px;
+  margin-left: 20px;
 }
 
 .clearButton {
   width: 150px;
   height: 50px;
-  border-radius: 4px;
+  border-radius: 2px;
   margin-left: 20px;
-}
-
-.searchButton {
-  width: 150px;
-  height: 50px;
-  border-radius: 4px;
-  margin-left: 20px;
+  border-width: 0.1px;
 }
 
 .select-message {
