--- a/Frontend/src/app/Base/components/grid/grid.component.scss
+++ b/Frontend/src/app/Base/components/grid/grid.component.scss
@@ -85,3 +85,9 @@ table {
 .status-filter {
   margin-left: 20px;
 }
+
+mat-toolbar {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+}
