--- a/Frontend/src/app/Base/components/newproject/newproject.component.scss
+++ b/Frontend/src/app/Base/components/newproject/newproject.component.scss
@@ -165,3 +165,11 @@ input[type="date"] {
   /* Add your desired styles here */
   padding: 8px;
 }
+
+select {
+  width: 250px; /* Adjust the width as desired */
+  height: 40px; /* Adjust the height as desired */
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 5px;
+}
