--- a/Frontend/src/app/Base/components/pop-up/pop-up.component.html
+++ b/Frontend/src/app/Base/components/pop-up/pop-up.component.html
@@ -1,2 +1,2 @@
-<div>{{ data.message }}</div>
+<div>{{ "data.message" | translate }}</div>
 <button mat-button class="reloadButton" (click)="reload()">OK</button>
